Fix Header with white background on mobile dark

--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -42,12 +42,12 @@
 }
 
 #header.scroll > div:first-child {
-  @apply bg-white md:bg-white/90 md:backdrop-blur-md;
+  @apply bg-page md:bg-white/90 md:backdrop-blur-md;
   box-shadow: 0 0.375rem 1.5rem 0 rgb(140 152 164 / 13%);
 }
 .dark #header.scroll > div:first-child,
 #header.scroll.dark > div:first-child {
-  @apply bg-white md:bg-[#030621e6] border-b border-gray-500/20;
+  @apply bg-page md:bg-[#030621e6] border-b border-gray-500/20;
   box-shadow: none;
 }
 /* #header.scroll > div:last-child {
